tests/anp_test1_deny_traffic_at_cluster_level/anp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: cluster-wide-deny-example
spec:
  priority: 10
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: sensitive-ns
  ingress:
    - name: select-all-deny-all 
      action: Deny
      from:
      - namespaces: {}
